# chatty_channels

./: pyproject.toml
chatty_channels/: db.sqlite3  manage.py
chatty_channels/chatty_channels/: asgi.py  settings.py  urls.py  wsgi.py
chatty_channels/chatty_channels_app/: admin.py  apps.py  consumers.py  models.py  urls.py  views.py
chatty_channels/chatty_channels_app/migrations/: 0001_initial.py  0002_rename_created_chatroom_created.py
chatty_channels/chatty_channels_app/templates/chatty_channels_app/: base.html  index.html  login.html  room.html  signout-button.html  signup.html
